# Manaburn-Engine

./: CMakeLists.txt  vcpkg.json
app/: CMakeLists.txt
app/src/: Manaburn.cpp
graphics/: CMakeLists.txt
graphics/shaders/: colored_triangle.frag  colored_triangle.vert  tri_mesh.vert
graphics/src/: Cmd.cpp  Cmd.h  GUI.h  Image.cpp  Image.h  MB_Cmd.cpp  MB_Cmd.h  MB_Device.cpp  MB_Device.h  MB_Engine.cpp  MB_Engine.h  MB_GUI.cpp  MB_GUI.h  MB_Image.cpp  MB_Image.h  MB_Pipeline.cpp  MB_Pipeline.h  MB_Swapchain.cpp  MB_Swapchain.h  Object.h  Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h  vk_descriptors.cpp  vk_descriptors.h  vk_types.h
graphics/src/engine/: Camera.cpp  Camera.h  GUI.cpp  GUI.h  MB_Engine.cpp  MB_Engine.h  Object.cpp  Object.h  engine.cpp  engine.h
graphics/src/refactoring/: device.cpp  device.h  swapchain.cpp  swapchain.h  vk_interface.cpp  vk_interface.h
graphics/src/vulkan/: Cmd.cpp  Cmd.h  Device.cpp  Device.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h  vk_interface.cpp  vk_interface.h
graphics/src/vulkan_util/: vk_descriptors.cpp  vk_descriptors.h  vk_types.h  vk_util.cpp  vk_util.h
